--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -13,11 +13,11 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   test:
    name: Subscrbeit
     # The type of runner that the job will run on
    runs-on: ubuntu-latest
+   timeout-minutes: 999999999999
    strategy:
     fail-fast: false
     matrix:
